GO-GRPC-PYTHON/service2.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-service
spec:
  selector:
    app: test
  ports:
    - port: 3000
      targetPort: 3000
  type: LoadBalancer
